--- a/Woche3/API_Calls.ipynb
+++ b/Woche3/API_Calls.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# API Aufrufe mit Python"
+    "# API Aufrufe mit Python !!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,29 +28,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://caee3834c899a00e1b1c.free.beeceptor.com/api/users\""
+    "url = \"https://ca91e472be78a43e81f5.free.beeceptor.com/api/users\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'first_name': 'Max2',\n",
+       "[{'first_name': 'Max',\n",
        "  'last_name': 'Mustermann',\n",
        "  'age': 30,\n",
        "  'is_active': True,\n",
-       "  'id': 'd1fb1ea0c348f5e413b1'}]"
+       "  'id': '6bdab1bf1915ebfc8b48'},\n",
+       " {'first_name': 'Fabian',\n",
+       "  'last_name': 'Graf',\n",
+       "  'age': 25,\n",
+       "  'is_active': True,\n",
+       "  'id': '49870f9c17f2d5adf24c'}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'first_name': 'Felix', 'last_name': 'Huber', 'age': 22, 'is_active': True, 'id': '96606f5d1cd56c6bb698'}\n"
+      "{'first_name': 'Felix', 'last_name': 'Huber', 'age': 22, 'is_active': True, 'id': '5b3535e1830255a980bc'}\n"
      ]
     }
    ],
@@ -101,6 +106,60 @@
     "\n",
     "print(response.json())\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'first_name': 'Felix', 'last_name': 'Huber', 'age': 23, 'is_active': False, 'id': '5b3535e1830255a980bc'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data2 = {\n",
+    "  \"first_name\": \"Felix\",\n",
+    "  \"last_name\": \"Huber\",\n",
+    "  \"age\": 23,\n",
+    "  \"is_active\": False\n",
+    "}\n",
+    "\n",
+    "url2 = url + '/5b3535e1830255a980bc'\n",
+    "\n",
+    "response = requests.put(\n",
+    "    url= url2,\n",
+    "    data=json.dumps(data2),\n",
+    "    headers=headers\n",
+    ")\n",
+    "\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = requests.delete(\n",
+    "    url= url2\n",
+    "\n",
+    ")\n",
+    "\n",
+    "print(response)"
    ]
   }
  ],
