Put und Delete probiert

--- a/Woche3/API_Calls.ipynb
+++ b/Woche3/API_Calls.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# API Aufrufe mit Python"
+    "# API Aufrufe mit Python !!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,29 +28,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = \"https://caee3834c899a00e1b1c.free.beeceptor.com/api/users\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'first_name': 'Max2',\n",
-       "  'last_name': 'Mustermann',\n",
-       "  'age': 30,\n",
-       "  'is_active': True,\n",
-       "  'id': 'd1fb1ea0c348f5e413b1'}]"
+       "'https://caa2525eb283a6eb7bb3.free.beeceptor.com/api/users/53cdb3d3e63deab29105'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://caa2525eb283a6eb7bb3.free.beeceptor.com/api/users\"\n",
+    "url2 = url + '/53cdb3d3e63deab29105'\n",
+    "\n",
+    "url2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'first_name': 'Doris',\n",
+       "  'last_name': 'Mustermann',\n",
+       "  'age': 25,\n",
+       "  'is_active': True,\n",
+       "  'id': '0715be21c82328fe1323'},\n",
+       " {'first_name': 'Felix',\n",
+       "  'last_name': 'Huber',\n",
+       "  'age': 22,\n",
+       "  'is_active': True,\n",
+       "  'id': '74f8603d8f8088e4558a'}]"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'first_name': 'Felix', 'last_name': 'Huber', 'age': 22, 'is_active': True, 'id': '96606f5d1cd56c6bb698'}\n"
+      "{'first_name': 'Felix', 'last_name': 'Huber', 'age': 22, 'is_active': True, 'id': '74f8603d8f8088e4558a'}\n"
      ]
     }
    ],
@@ -101,6 +120,61 @@
     "\n",
     "print(response.json())\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'first_name': 'Maxi', 'last_name': 'Mustermann', 'age': 44, 'is_active': True, 'id': '53cdb3d3e63deab29105'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data2 = {\n",
+    "  \"first_name\": \"Maxi\",\n",
+    "  \"last_name\": \"Mustermann\",\n",
+    "  \"age\": 44,\n",
+    "  \"is_active\": True\n",
+    "}\n",
+    "\n",
+    "response = requests.put(\n",
+    "    url= url2,\n",
+    "    data=json.dumps(data2),\n",
+    "    headers=headers\n",
+    ")\n",
+    "\n",
+    "print(response.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.delete(\n",
+    "    url= url2\n",
+    "\n",
+    ")\n",
+    "\n",
+    "response"
    ]
   }
  ],
